--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://kadscen.github.io/Sightseer-app",
   "name": "sightseer",
   "version": "0.1.0",
   "private": true,
@@ -18,6 +17,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-select": "^4.1.0",
     "redux": "^4.0.5"
   },
   "scripts": {
