--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.4.3",
     "react-select": "^4.1.0",
     "redux": "^4.0.5",
+    "sweetalert": "^2.1.2",
     "uuid": "^8.3.2"
   },
   "scripts": {
