--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^8.2.1",
+    "firebase": "^9.6.0",
+    "firebase-tools": "^9.23.0",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "materialize-css": "^1.0.0-rc.2",
@@ -22,6 +23,7 @@
     "react-scripts": "3.4.3",
     "react-select": "^4.1.0",
     "redux": "^4.0.5",
+    "styled-components": "^6.1.1",
     "sweetalert": "^2.1.2",
     "uuid": "^8.3.2"
   },
